# prep

./: .gitignore  .ocamlformat  Makefile  README.md  dune  dune-project  main.ml  prep.opam  rehearsal.lib.opam  spaced-repetition.install  spaced-repetition.opam
.github/workflows/: build.yml  release.yml
lib/: box.ml  card.ml  card.mli  cli.ml  console.ml  deck.ml  dune  editor.ml  interval.ml  store.ml  util.ml
scripts/: _prep  complete.sh  install.sh
src/: cli.ml  console.ml  dune  main.ml  rehearsal.ml
test/: dune  test.ml
