(library
  (name rehearsal)
  (public_name rehearsal)
	(libraries stdio
             base
             str
             uuidm
             re
             fmt
             fmt.tty
             cmdliner
             yojson
             ppx_deriving_yojson.runtime)
  (preprocess (pps ppx_deriving.show ppx_deriving_yojson)))
