(library
  (name prep)
  (public_name prep)
	(libraries stdio
             base
             str
             uuidm
             re
             fmt
             fmt.tty
             cmdliner
             yojson
             ppx_deriving_yojson.runtime)
  (preprocess (pps ppx_deriving.show ppx_deriving_yojson)))
