(library
  (name prep)
  (public_name prep)
	(libraries stdio
             base
             str
             uuidm
             fmt
             fmt.tty
             cmdliner
             yojson
             ISO8601
             ppx_deriving_yojson.runtime)
  (preprocess (pps ppx_deriving.show ppx_deriving_yojson)))
