(executable
  (name main)
  (package rehearsal)
  (public_name rehearsal)
	(libraries base
             core
             stdio
             str
             cmdliner
             uuidm
             re
             yojson
             ppx_deriving_yojson.runtime)
  (preprocess (pps ppx_deriving.show ppx_deriving_yojson)))
